--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Время по городам</h1>
+        <h1>Мировые Часы</h1>
         <ul class="countries-list">
             <li>
                 <span class="country">Россия</span>
